{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 4,
  "lineage": "fa343e3e-2c10-fbbc-483b-7544205ec2a2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:861990677587:security-group/sg-0f1828550a1d45704",
            "description": "Security Group to study Terraform provisioning of Firewall",
            "egress": [],
            "id": "sg-0f1828550a1d45704",
            "ingress": [],
            "name": "terraform-firewall",
            "name_prefix": "",
            "owner_id": "861990677587",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f7509dc798684a31"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "861990677587",
            "id": "sg-0f1828550a1d45704",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "firewall-egress-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:861990677587:security-group-rule/sgr-03f84106b21044ffe",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-03f84106b21044ffe",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0f1828550a1d45704",
            "security_group_rule_id": "sgr-03f84106b21044ffe",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "861990677587",
            "id": "sgr-03f84106b21044ffe",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.terraform-firewall"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "firewall-ingress-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:861990677587:security-group-rule/sgr-0aa8c5b9302a22da1",
            "cidr_ipv4": "10.0.0.0/8",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0aa8c5b9302a22da1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0f1828550a1d45704",
            "security_group_rule_id": "sgr-0aa8c5b9302a22da1",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "861990677587",
            "id": "sgr-0aa8c5b9302a22da1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.terraform-firewall"
          ]
        }
      ]
    }
  ]
}